<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/view_master_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddItemActivity"
    android:orientation="vertical">

    <TextView
...
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="20dp"
        android:layout_weight="0">

        <Button
            android:id="@+id/view_back"
            android:clickable="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="BACK"
            android:backgroundTint="@color/blue_button"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:layout_weight="0.5"
            android:focusable="true">
        </Button>

        <Button
            android:id="@+id/view_belete"
            android:clickable="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="DELETE"
            android:backgroundTint="@color/light_red"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:layout_weight="0.5"
            android:focusable="true">
        </Button>

        <Button
            android:id="@+id/view_edit"
            android:clickable="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="EDIT"
            android:backgroundTint="@color/light_green"
            android:textColor="@color/black"
...
