...
            android:textStyle="bold"
            android:textSize="20sp"
            android:padding="20sp"
            android:layout_gravity="bottom"/>

        <Button
            android:id="@+id/add_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:backgroundTint="@color/grey_button"
            android:clickable="true"
            android:focusable="true"
...
            android:textSize="20sp"
            android:clickable="true"
            android:focusable="true"
            android:backgroundTint="@color/grey_button"
            android:visibility="gone" />
        <Button
            android:id="@+id/delete_button_multiple"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Delete"
            android:textSize="20sp"
            android:clickable="true"
            android:focusable="true"
...
